# structutils

./: CMakeLists.txt  README.md
cmake/: add_googletest.cmake
src/: CMakeLists.txt
src/astruct/: CMakeLists.txt  astruct.h  declare.h  multi_declare.h  tuple.h
src/bstruct/: CMakeLists.txt  bstruct.h  declare.h  multi_declare.h  tuple.h
src/structutils/: CMakeLists.txt  arg_count.h
test/: CMakeLists.txt
test/astruct/: CMakeLists.txt  astruct_test.cc
test/bstruct/: CMakeLists.txt  bstruct_test.cc
